--- a/debian/debian-8.3/debian/changelog
+++ b/debian/debian-8.3/debian/changelog
@@ -4,6 +4,7 @@ postgresql-8.3 (8.3.15-1.pgapt+1) unstable; urgency=low
   * Import 9.1's new rules file.
     + Use "make; make -C contrib" instead of "make world".
     + Use DEB_BUILD_HARDENING_FORMAT=0.
+  * Move to 3.0 (quilt).
 
  -- Christoph Berg <myon@debian.org>  Fri, 02 Sep 2011 16:14:36 +0200
 
