--- a/debian/debian-8.2/debian/changelog
+++ b/debian/debian-8.2/debian/changelog
@@ -1,3 +1,9 @@
+postgresql-8.2 (8.2.22-1~pgapt+1) sid-pgapt; urgency=low
+
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Mon, 26 Sep 2011 17:21:29 +0200
+
 postgresql-8.2 (8.2.21-1~pgapt+1) sid-pgapt; urgency=low
 
   * Backport packaging to 8.2.
