--- a/pub/README
+++ b/pub/README
@@ -10,8 +10,8 @@ Import the repository key from ACCC4CF8.asc:
 
   wget -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
 
-Edit /etc/apt/sources.list (replace squeeze with the actual distribution you
-are using):
+Edit /etc/apt/sources.list.d/pgdg.list (replace squeeze with the actual
+distribution you are using):
 
   deb http://apt.postgresql.org/pub/repos/apt/ squeeze-pgdg main
 
