--- a/pub/README
+++ b/pub/README
@@ -6,26 +6,19 @@ as some client applications.
 
 To use the repository, do the following:
 
-Import the repository key from ACCC4CF8.asc:
-
-  wget -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
-
-Edit /etc/apt/sources.list.d/pgdg.list (replace squeeze with the actual
-distribution you are using):
+Create /etc/apt/sources.list.d/pgdg.list. The distributions are called
+codename-pgdg. In the example, replace "squeeze" with the actual distribution
+you are using:
 
   deb http://apt.postgresql.org/pub/repos/apt/ squeeze-pgdg main
 
-Configure apt's package pinning to prefer the PGDG packages over the Debian
-ones in /etc/apt/preferences.d/pgdg.pref:
+(You may determine the codename of your distribution by running lsb_release -c.)
 
-  Package: *
-  Pin: release o=apt.postgresql.org
-  Pin-Priority: 500
+Import the repository key from http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc,
+update the package lists, and start installing packages:
 
-Update the package lists, and install the pgdg-keyring package to automatically
-get repository key updates:
-
-  apt-get update
-  apt-get install pgdg-keyring
+  wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
+  sudo apt-get update
+  sudo apt-get install postgresql pgadmin3
 
 More information: http://wiki.postgresql.org/wiki/Apt
